# FHI-aims-ocl-sc23

./: .gitignore  .gitlab-ci.yml  AIMS_CODE_GUIDELINES.md  CHANGELOG_2019.md  CMakeLists.txt  README.md  example-sbatch.sh  get_info.py  initial_cache.example.cmake  rebuild.example.sh
.gitlab/issue_templates/: Bug.md  Feature_Change.md  New_Feature.md
ci_build/: test_aims_no_scalapack.sh  test_aims_no_spglib.sh
cmake/modules/: Tools.cmake
doc/: FHI-aims.tex  appendix_cmake.tex  appendix_gpu_acceleration.tex  appendix_multiaims.tex  chapter_quickstart.tex  section_EV.tex  section_basis_sets.tex  section_mbd.tex  section_mpe_implicit_solvent.tex  section_output.tex  section_scf_convergence.tex
regression_tests/: testsuite.xml
regression_tests/comparisons/: abstractcomparison.py
regression_tests/core/: commandparser.py
regression_tests/doc/: Makefile  readme_regression.tex
src/: CMakeLists.txt  DFPT_pulay_mixing.f90  DFPT_wrapper.f90  KS_optical_properties.f90  KS_optical_properties_tetrahedron.f90  Makefile  Makefile copy  Makefile.backend  WannierCenters.f90  \  aims.f90_bt  analytic_multipole_coefficients.f90  analytical_stress.f90  bt.c  check_norm_p0.f90  check_stacksize.f90  cmake_info.f90.in  contour_def_gw.f90  contour_def_gw_environment.f90  contour_def_gw_types.f90  density_matrix_evaluation.f90  dimensions.f90  elsi_version_stub.f90  elsi_wrapper.f90  esp_charges.f90  esp_grids.f90  evaluate_periodic_gw_selfenergy.f90  evaluate_xc.f90  forces_densmat.f90  get_coeff_3fn_lvl_full.f90  get_n_compute_maxes_p1.f90  gw_para.f90  hartree_potential_real_p0.f90  hartree_potential_storage.f90  heapsort_general.f90  initialize_scf.f90  integrate_hamiltonian_matrix_p2.f90  integrate_ovlp_matrix_p2.f90  isc_implicit_solvent_cavity.f90  isc_projected_voronoi.f90  (+43 more)
src/DFPT/: cpscf_solver.f90  sum_up_whole_potential_p2_shanghui.f90  update_hartree_potential_p2_shanghui.f90
src/DFPT_OpenCL/: .gitignore  CMakeLists.txt  Makefile  cmake_help.h.in  integrate_first_order_rho.c  integrate_first_order_rho.cl  main.c  opencl_source.h.in  opencl_util.f90  opencl_util_c.c  opencl_util_c.h  opencl_util_mpi.c  opencl_util_mpi.h  opencl_util_mpi_m.c  pass_mod_var.h  save_load_var.c  save_load_var.h  sbatch.sh  slave_util.c  sum_up copy.cl  sum_up-test.cl  sum_up.cl  sum_up_whole_potential_shanghui.c  sum_up_whole_potential_shanghui.h
src/DFPT_OpenCL/sumup-ker-stage/: sum_up-0.cl  sum_up-1.cl  sum_up-2.cl  sum_up-3.cl  sum_up-4.cl  sum_up-5.cl  sum_up-6.cl
src/DFPT_OpenCL/swcl/: .gitignore  slave.c  slave.info.c
src/DFPT_dielectric/: cpscf_solver_dielectric.f90  evaluate_first_order_H_dielectric.f90  evaluate_first_order_rho_dielectric.f90  integrate_first_order_H_dielectric.f90  integrate_first_order_rho_dielectric.f90  prune_density_matrix_sparse_dielectric.f90  (+1 more)
src/basis_sets/: grids.f90  (+5 more)
utilities/: aimsplot.py3
(+120 files in other folders)
